fixing image dimensions on mobile and fonts for crticreview

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,6 @@
   color: #323232 !important;
 }
 .critic-reviews p{
-  font-family: 'Newsreader', serif;
   font-size: 1.6em !important;
   
 }
@@ -85,7 +84,16 @@
   background-image: url('./img/blue_bgnd.jpg');
   width: 100%;
   background-size: 100% 100%;
+  -webkit-background-size: 100%; 
+-moz-background-size: 100%; 
+-o-background-size: 100%; 
+background-size: 100%; 
+-webkit-background-size: cover; 
+-moz-background-size: cover; 
+-o-background-size: cover; 
+background-size: cover;
 }
+
 
 @media screen and (min-width: 750px){
 
